# projectc

gestionCapteur/: Makefile  Makefile.am  Makefile.in  capteur.c~  capteur.h~  config.h  config.status  configure  configure.in  gestioncapteur.glade  gestioncapteur.gladep
gestionCapteur/autom4te.cache/: output.1  requests  traces.0  traces.1
gestionCapteur/po/: Makefile  Makefile.in
gestionCapteur/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  callbacks.c  callbacks.c~  callbacks.h  callbacks.h~  capteur.c  capteur.c~  capteur.h  capteur.h~  capteur.txt  capteur.txt~  dash.c  dash.c~  dash.h  gestioncapteur  interface.c  interface.c.bak  interface.h.bak  main.c  main.c~
gestionCapteur/src/.deps/: callbacks.Po  capteur.Po  dash.Po
